--- a/app/assets/stylesheets/modules/layouts/_application.scss
+++ b/app/assets/stylesheets/modules/layouts/_application.scss
@@ -6,201 +6,496 @@
 .footer-main li:hover{
   text-decoration: underline;
 }
- @media screen and (max-width:1060px) {
-  .header{
-    height:100px;
-    width:100%;
-    background-color:white;
-    color:red;
-    &-inner{
-      height:92px;
-      width:750px;
-      margin: 0 auto;
-      background-color:white;
-      position: relative;
+
+.main-header {
+  height: 100px;
+  width: 100%;
+  position: relative;
+
+  .header_inner {
+    width: 1020px;
+    height: 100px;
+    margin: 0 auto;
+    padding: 8px 0 0;
+    z-index: 100;
+    &_top {
+      height: 40px;
+      margin:1px;
+      padding: 0;
+      .logo {
+        height: 36px;
+        width: 130px;
+        margin: 2px 2px;
+        float: left;
+      }
+      .header_form {
+        height: 40px;
+        width: 82%;
+        margin: left 45px;
+        border-radius: 5px;
+        border: solid 1px rgb(202, 202, 202);
+        background-color: rgb(243, 243, 243);
+        float: right;
+        padding-left: 10px;
+        &__textfield {
+          height: 40px;
+          width: 790px;
+          line-height: 40px;
+          float: left;
+        }
+        input, button, textarea, select {
+          margin: 0;
+          padding: 0;
+          background: none;
+          border: none;
+          border-radius: 0;
+          outline: none;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          appearance: none;
+        }
+        .search-icon {
+          height: 40px;
+          width: 44px;
+          float: right;
+          cursor: pointer;
+          background-color: rgb(243, 243, 243);
+          .loupe-icon {
+            font-size: 16px;
+          }
+        }
+      }
     }
-    &-top{
-      height:40px;
-      display:flex;
-    }
-  }
-  .logo{
-    width:140px;
-    height:40px;
-   
-  }
-  .icon-hidden{
-    display: none;
-  }
-  .image-label{
-    margin: 0 0 0 auto;
-    border-radius:5px;
-    position:absolute;
-    right:5px;
-    top:4px;
-    
-  }
-  .category{
-    width:150px;
-    display:flex;
-    margin-top:20px;
-    &__icon{
-      color:red;
-      margin-top:3px;
-    }
-    &__search{
-      font-weight: bold;
-      font-size:14px;
-      color:black;
-      margin:2px 0 0 5px;
-    
-    &:hover {
-      color:skyblue;
-    }
-  }
-  }
-  .brand{
-    position: relative;
-    right:50px;
-    width:170px;
-    display:flex;
-    margin-top:20px;
-    // margin-left:20px;
-  
-    &__icon{
-      color:red;
-    }
-    &__search{
-      font-weight: bold;
-      font-size:14px;
-      color:black;
-      margin:2px 0 0 5px;
-      &:hover {
-        color:skyblue;
+    .header_bottom-crearfix {
+      height: 50px;
+      margin-top: 8px;
+      padding: 0;
+      .left-contents {
+        height: 40px;
+        width: 350px;
+        margin: 5px 5px;
+        float: left;
+        font-weight: 600;
+        &_search-nav {
+          height: 40px;
+          width: 350px;
+          display: flex;
+          .category_nav {
+            width: 150px;
+            display: inline-block;
+            padding: 6px;
+            cursor: pointer;
+            .category_text {
+              font-size: 14px;
+              float: right;
+            }
+            .category_icon {
+              height: 20px;
+              width: 20px;
+              float: left;
+              padding: bottom 2px;
+              .border-icon {
+                font-size: 16px;
+                padding: 2px;
+                position: absolute;
+                opacity: 0.9;
+                color: rgb(255, 0, 0);
+              }
+            }
+          }
+          .brand_nav {
+            width: 140px;
+            display: inline-block;
+            padding: 6px;
+            cursor: pointer;
+            .brand_text {
+              font-size: 14px;
+              float: right;
+            }
+            .brand_icon {
+              height: 20px;
+              width: 20px;
+              float: left;
+              padding: bottom 2px;
+              .label-icon {
+                font-size: 16px;
+                padding: 2px;
+                position: absolute;
+                opacity: 0.9;
+                color: rgb(255, 0, 0);
+              }
+            }
+          }
+        }
+      }
+      .right-contents {
+        height: 40px;
+        width: 380px;
+        margin: 5px 0;
+        float: right;
+        &_user-nav {
+          height: 40px;
+          width: 380px;
+          display: flex;
+          .right-header_notification {
+            width: 80px;
+            padding: 6px;
+            display: inline-block;
+            &_text {
+              font-size: 14px;
+              float: right;
+            }
+            &_icon {
+              height: 20px;
+              width: 20px;
+              float: left;
+              padding: bottom 2px;
+              .horn-icon {
+                font-size: 16px;
+                padding: 2px;
+                position: absolute;
+                opacity: 0.5;
+              }
+            }
+          }
+          .right-header_todo-list {
+            width: 125px;
+            padding: 6px;
+            display: inline-block;
+            &_text {
+              font-size: 14px;
+              float: right;
+              margin-right: 3px;
+            }
+            &_icon {
+              height: 20px;
+              width: 20px;
+              float: left;
+              padding: bottom 2px;
+              .check-icon {
+                font-size: 16px;
+                padding: 2px;
+                position: absolute;
+                opacity: 0.5;
+                margin-left: 5px;
+              }
+            }
+          }
+          .right-header_mypage-link {
+            width: 100px;
+            padding: 6px;
+            display: inline-block;
+            &_text {
+              font-size: 14px;
+              float: right;
+              margin-right: 12px;
+            }
+            &_icon {
+              height: 20px;
+              width: 20px;
+              float: left;
+              padding: bottom 2px;
+
+              .user-icon {
+                font-size: 16px;
+                padding: 2px;
+                position: absolute;
+                opacity: 0.5;
+              }
+            }
+          }
+          li.right-header_log-in {
+            height: 30px;
+            width: 84px;
+            display: block;
+            padding: 0 10px;
+            line-height: 30px;
+            border-radius: 4px;
+            text-align: center;
+            background: #ea352d;
+            border: 1px solid #ea352d;
+            color: #fff;
+            text-decoration: none;
+            font-size: 14px;
+            margin-left: auto;
+            font-weight: 500;
+            a {
+              text-decoration: none;
+              color: #fff;
+              }
+          }
+          .right-header_sign-up {
+            height: 30px;
+            width: 56px;
+            display: block;
+            padding: 0 10px;
+            margin-left: 10px;
+            line-height: 30px;
+            border-radius: 4px;
+            text-align: center;
+            // background-color: #b3d4fc;
+            border: 1px solid #0099e8;
+            color: #fff;
+            text-decoration: none;
+            font-size: 14px;
+            font-weight: 500;
+            a {
+              text-decoration: none;
+              color: #0099e8;
+              }
+              .right-header_sign-up:hover {
+              background-color: #0099e8;
+            }
+          }
+        }
       }
     }
   }
-  
-  .liked-item{
-    width:113px;
-    display: none;
-  }
-  .header-bottom__right__text{
-    font-weight: lighter !important;
-  }
-  .far.fa-heart.fa-lg{
-    color:gray;
-  }
-  .far.fa-heart.fa-lg:hover{
-    color:skyblue;
-  }
-  .header-bottom__right__text:hover{
-    color:skyblue;
-  }
-  .notification-list{
-    width:83px;
-    margin: 0 0 0 auto;
-    
-  }
-  .notification-list:hover{
-    color:skyblue;
-  }
-  .far.fa-bell.fa-lg{
-    color:gray;
-  }
-  .far.fa-bell.fa-lg:hover{
-    color:skyblue;
-  }
-  .todo-list{
-    width:130px;
-    margin: 0 0 0 10px;
-    color:gray;
-   
-  }
-  .fas.fa-check.fa-lg{
-    color:gray;
-  }
-  .todo-list:hover{
-    color:skyblue;
-  }
-  .fas.fa-check.fa-lg:hover{
-    color:skyblue;
-  }
-  .my-page{
-    width:120px;
-    margin: 0 0 0 10px;
-  }
-  .my-page__link{
-    width:100%;
-    display:flex;
-    text-decoration: none;
-  }
-  .my-page__text{
-    margin-left:10px;
-    margin-top:5px;
-  }
-  .form{
-    width:600px;
-    height:40px;
-    margin-right:auto;
-    margin-left:auto;
+}
+
+ @media screen and (max-width:1060px) {
+  .main-header {
+    height: 100px;
+    width: 100%;
     position: relative;
-    }
-    #form{
-      position: relative;
-    }
-    .search{
-      background-color:#f5f5f5;
-      width:590px;
-      height:38px;
-      padding:0 10px; 
-      border-radius:5px;
-      outline:0;
-      background:rgb(245, 241, 241);
-      font-size: 16px;
-      border: solid 1px;
-      margin-top:5px;
-      border-color:gray;
-    }
-    .fas.fa-search.fa-lg{
-      width:40px;
-      height:41px;
-      font-size:15px;
-      background-color:#666;
-      color:white;
-      margin: 0 0 0 auto;
-      // border: solid 1px;
-      outline: none;
-      border-radius:5px;
-    }
-  .header-bottom{
-    height:44px;
-    display:flex;
-    &__left{
-      position: absolute;
-      width:400px;
-      height:44px;
-      display:flex;
-      z-index: 1;
-      font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-    }
-    &__right{
-      width:421px;
-      height:44px;
-      display:flex;
-      margin-left:350px;
-      margin-top:9px;
-      color:black;
-      font-size:14px;
-      font:sans-serif;
-      justify-content: center;
-      align-items: center;
-      &__text{
-        color:black;
-        font-size:13px;
-        font:sans-serif;
-        float:right;
-        margin-left:5px;
+  
+    .header_inner {
+      width: 1020px;
+      height: 100px;
+      margin: 0 auto;
+      padding: 8px 0 0;
+      z-index: 100;
+      &_top {
+        height: 40px;
+        margin:1px;
+        padding: 0;
+        .logo {
+          height: 36px;
+          width: 130px;
+          margin: 2px 2px;
+          float: left;
+        }
+        .header_form {
+          height: 40px;
+          width: 82%;
+          margin: left 45px;
+          border-radius: 5px;
+          border: solid 1px rgb(202, 202, 202);
+          background-color: rgb(243, 243, 243);
+          float: right;
+          padding-left: 10px;
+          &__textfield {
+            height: 40px;
+            width: 790px;
+            line-height: 40px;
+            float: left;
+          }
+          input, button, textarea, select {
+            margin: 0;
+            padding: 0;
+            background: none;
+            border: none;
+            border-radius: 0;
+            outline: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+          }
+          .search-icon {
+            height: 40px;
+            width: 44px;
+            float: right;
+            cursor: pointer;
+            background-color: rgb(243, 243, 243);
+            .loupe-icon {
+              font-size: 16px;
+            }
+          }
+        }
+      }
+      .header_bottom-crearfix {
+        height: 50px;
+        margin-top: 8px;
+        padding: 0;
+        .left-contents {
+          height: 40px;
+          width: 350px;
+          margin: 5px 5px;
+          float: left;
+          font-weight: 600;
+          &_search-nav {
+            height: 40px;
+            width: 350px;
+            display: flex;
+            .category_nav {
+              width: 150px;
+              display: inline-block;
+              padding: 6px;
+              cursor: pointer;
+              .category_text {
+                font-size: 14px;
+                float: right;
+              }
+              .category_icon {
+                height: 20px;
+                width: 20px;
+                float: left;
+                padding: bottom 2px;
+                .border-icon {
+                  font-size: 16px;
+                  padding: 2px;
+                  position: absolute;
+                  opacity: 0.9;
+                  color: rgb(255, 0, 0);
+                }
+              }
+            }
+            .brand_nav {
+              width: 140px;
+              display: inline-block;
+              padding: 6px;
+              cursor: pointer;
+              .brand_text {
+                font-size: 14px;
+                float: right;
+              }
+              .brand_icon {
+                height: 20px;
+                width: 20px;
+                float: left;
+                padding: bottom 2px;
+                .label-icon {
+                  font-size: 16px;
+                  padding: 2px;
+                  position: absolute;
+                  opacity: 0.9;
+                  color: rgb(255, 0, 0);
+                }
+              }
+            }
+          }
+        }
+        .right-contents {
+          height: 40px;
+          width: 380px;
+          margin: 5px 0;
+          float: right;
+          &_user-nav {
+            height: 40px;
+            width: 380px;
+            display: flex;
+            .right-header_notification {
+              width: 80px;
+              padding: 6px;
+              display: inline-block;
+              &_text {
+                font-size: 14px;
+                float: right;
+              }
+              &_icon {
+                height: 20px;
+                width: 20px;
+                float: left;
+                padding: bottom 2px;
+                .horn-icon {
+                  font-size: 16px;
+                  padding: 2px;
+                  position: absolute;
+                  opacity: 0.5;
+                }
+              }
+            }
+            .right-header_todo-list {
+              width: 125px;
+              padding: 6px;
+              display: inline-block;
+              &_text {
+                font-size: 14px;
+                float: right;
+                margin-right: 3px;
+              }
+              &_icon {
+                height: 20px;
+                width: 20px;
+                float: left;
+                padding: bottom 2px;
+                .check-icon {
+                  font-size: 16px;
+                  padding: 2px;
+                  position: absolute;
+                  opacity: 0.5;
+                  margin-left: 5px;
+                }
+              }
+            }
+            .right-header_mypage-link {
+              width: 100px;
+              padding: 6px;
+              display: inline-block;
+              &_text {
+                font-size: 14px;
+                float: right;
+                margin-right: 12px;
+              }
+              &_icon {
+                height: 20px;
+                width: 20px;
+                float: left;
+                padding: bottom 2px;
+  
+                .user-icon {
+                  font-size: 16px;
+                  padding: 2px;
+                  position: absolute;
+                  opacity: 0.5;
+                }
+              }
+            }
+            li.right-header_log-in {
+              height: 30px;
+              width: 84px;
+              display: block;
+              padding: 0 10px;
+              line-height: 30px;
+              border-radius: 4px;
+              text-align: center;
+              background: #ea352d;
+              border: 1px solid #ea352d;
+              color: #fff;
+              text-decoration: none;
+              font-size: 14px;
+              margin-left: auto;
+              font-weight: 500;
+              a {
+                text-decoration: none;
+                color: #fff;
+                }
+            }
+            .right-header_sign-up {
+              height: 30px;
+              width: 56px;
+              display: block;
+              padding: 0 10px;
+              margin-left: 10px;
+              line-height: 30px;
+              border-radius: 4px;
+              text-align: center;
+              // background-color: #b3d4fc;
+              border: 1px solid #0099e8;
+              color: #fff;
+              text-decoration: none;
+              font-size: 14px;
+              font-weight: 500;
+              a {
+                text-decoration: none;
+                color: #0099e8;
+                }
+                .right-header_sign-up:hover {
+                background-color: #0099e8;
+              }
+            }
+          }
+        }
       }
     }
   }
